turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:26: error: ')' expected but integer literal found.
		setX(getX()200)
                           ^